# foodgram-project

./: .dockerignore  .env.example  .flake8  .gitignore  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: foodgram.yml
apps/: errors.py
apps/about/: urls.py  views.py
apps/api/: serializer.py  serializers.py  urls.py  views.py
apps/core/templatetags/: user_filters.py
apps/recipes/: admin.py  filters.py  forms.py  mixins.py  services.py  urls.py  views.py
apps/recipes/migrations/: 0001_initial.py  0002_auto_20210119_0423.py  0003_auto_20210121_1131.py  0004_auto_20210122_0213.py  0005_favorite.py  0006_auto_20210123_0308.py  0007_purchase.py  0008_auto_20210124_0606.py  0009_auto_20210128_1258.py  0010_auto_20210201_1248.py  0011_auto_20210201_1256.py  0012_auto_20210206_0848.py
apps/recipes/models/: __init__.py  favorites.py  follow.py  ingredients.py  purchases.py  recipes.py  tags.py
apps/users/: forms.py  urls.py  views.py
docker/: entrypoint.sh
infra/: nginx.conf
infra/docker/: Dockerfile
server/: settings.py  urls.py
templates/: base.html
templates/about/: base.html
templates/includes/: footer.html  nav.html
templates/misc/: 404.html  500.html
templates/recipes/: add_recipe.html  base.html  favorites.html  follow.html  index.html  profile.html  purchases.html  recipe.html  recipe_confirm_delete.html
templates/registration/: login.html  password_change_done.html  password_change_form.html  password_reset_done.html  password_reset_form.html  signup.html
(+38 files in other folders)
