[tool.poetry]
name = "foodgram-project"
version = "0.1.0"
description = ""
authors = ["Denis S. <makafonov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.15.0"
Django = "^3.1.5"
Pillow = "^8.1.0"
sorl-thumbnail = "^12.7.0"

[tool.poetry.dev-dependencies]
rope = "^0.18.0"
wemake-python-styleguide = "^0.14.1"
yapf = "^0.30.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
