[tool.poetry]
name = "foodgram-project"
version = "0.1.0"
description = ""
authors = ["Denis S. <makafonov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dotenv = "^0.15.0"
Django = "~3.1.14"
Pillow = "^9.0"
sorl-thumbnail = "^12.7.0"
djangorestframework = "^3.12.2"
django-filter = "^2.4.0"
reportlab = "^3.5.59"
gunicorn = "^20.0.4"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
rope = "^0.19.0"
wemake-python-styleguide = "^0.15.3"
yapf = "^0.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
lines_after_imports = 2
include_trailing_comma = true
use_parentheses = true
